Fixed wrapping in the compounds table

--- a/dspace-qsardb/dspace-qsardb-client-gwt/src/main/resources/org/dspace/qsardb/client/public/application.css
+++ b/dspace-qsardb/dspace-qsardb-client-gwt/src/main/resources/org/dspace/qsardb/client/public/application.css
@@ -10,6 +10,10 @@
 	margin-left: 2px;
 }
 
+.CompoundDataGrid td:not(:nth-child(2)) {
+	white-space: nowrap;
+}
+
 #compound-distance-panel {
 	border: 2px solid #f0f0d2;
 }
